force-app/main/default/objects/custom_create347__c/custom_create347__c.object-meta.xml
<CustomObject>
    <label>Custom created object347</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects347</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>