force-app/main/default/objects/custom_create347__c/fields/custom_create_347field686__c.field-meta.xml
<CustomField>
    <fullName>custom_create_347field686__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 347field686</label>
    <type>Checkbox</type>
</CustomField>